# mmorp-client

./: CMakeLists.txt  SPEC.md  build.bat
assets/sprites/: README.md
docs/: 3D-Rendering.md  API-Integration.md  Architecture-Overview.md  Build-Instructions.md  Class-Diagrams.md  Controls.md  README.md
src/: GameClient.cpp  GameClient.hpp  HttpAuthClient.cpp  HttpAuthClient.hpp  Math3D.hpp  Renderer3D.cpp  Renderer3D.hpp  SpriteManager.cpp  SpriteManager.hpp  WebSocketClient.cpp  WebSocketClient.hpp  WorldState.hpp  main.cpp
